--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
+    font-weight: 400;
 }
 body {
     font-family: 'Roboto', sans-serif;
@@ -14,12 +15,60 @@ h1, h2, h3, h4, h5, h6 {
 h1 {
     font-size: 3rem;
 }
+h2 {
+    font-weight: 500;
+}
 /* nav and search menu */
+#search-content {
+    width: 200px;
+    height: 100vh;
+    padding: 15px;
+    background-color: #ffffff;
+}
 .closed {
     display: none;
 }
 #arrow {
     font-size: 1.4rem;
+}
+#close {
+    margin-left: 8px;
+}
+#close-div {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
+    color: #666666;
+    height: 40px;
+}
+#close-div:hover {
+    font-size: larger;
+}
+/* search input and buttons */
+input {
+    border: 1px solid cornflowerblue;
+    padding: 4px;
+    border-radius: 3px;
+    width: 90%;
+    margin-bottom: 16px;
+}
+.city-btn {
+    padding: 4px;
+    background-color: cornflowerblue;
+    border: none;
+    outline: none;
+    width: 100%;
+    text-align: center;
+    color: #ffffff;
+    text-transform: uppercase;
+    font-weight: 500;
+    margin-top: 8px;
+    border-radius: 3px;
+}
+.city-btn:hover, .city-btn:focus, .city-btn:active {
+    box-shadow: darkgray;
+    border: none;
+    outline: none;
 }
 /* today city and temp */
 .flex-container {
@@ -40,22 +89,33 @@ h1 {
 #today-container {
     text-align: center;
 }
+
 /* today other info */
 #info-container {
     display: flex;
     justify-content: space-around;
+    align-items: flex-end;
 }
 .info {
     text-align: center;
 }
+#uv {
+    background-color: red;
+    border-radius: 5px;
+    padding: 2px 10px;
+}
 /* forcast cards */
 #forcast-container {
-    overflow: scroll;
+    overflow-x: auto;
+    display: flex;
+    flex-wrap: nowrap;
+    margin-left: 8px;
 }
 .card {
     width: 60px;
-    height: 80px;
+    height: 100px;
     padding: 20px;
+    margin: 30px 4px;
     display: inline-block;
     text-align: center;
     background-color: #ffffff78;
@@ -64,4 +124,6 @@ h1 {
 }
 .forcast-temp {
     margin: 10px 0;
+    font-weight: 500;
+    font-size: 2rem;
 }
